src/internal/vm/snapshots/hebi__internal__vm__tests__empty_table.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := {}
v


# Result:
Object(
    {},
)
