src/internal/vm/snapshots/hebi__internal__vm__tests__example.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
v := 0
v


# Result:
Int(
    0,
)
