src/internal/vm/snapshots/hebi__internal__vm__tests__for_iter_list.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
for item in ["a", "b", "c"]:
  print item


# Result:
None

# Output:
a
b
c

